--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      #root {
+        margin: 0;
+        height: 100vh; /* Set the height of the root element to 100% of the viewport height */
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
